--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,63 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@android:color/transparent"
     tools:context=".Activities.Home.HomeFragment">
 
-    <!-- filter post buttons -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/main_filter_toolbar"
+        android:layout_height="61dp"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:gravity="center">
+        android:padding="16dp">
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <FrameLayout
+            android:id="@+id/frame_explore"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_margin="8dp"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:background="@drawable/round_button_shape"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless">
 
-            <Button
-                android:id="@+id/button_explore"
-                android:layout_width="1000dp"
-                android:layout_height="1000dp"
-                android:layout_weight="1"
-                android:text="EXPLORE"
-                android:backgroundTint="@color/button_pressed"
-                android:textColor="#FFFFFF"
-                android:gravity="center"
-                android:textSize="18sp" />
-        </LinearLayout>
+            <pl.droidsonroids.gif.GifImageView
+                android:id="@+id/gif_explore"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/explore_gif" />
 
+            <TextView
+                android:id="@+id/explore_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Explore"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </FrameLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <FrameLayout
+            android:id="@+id/frame_follower"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_margin="8dp"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:background="@drawable/round_button_shape"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless">
 
-            <Button
-                android:id="@+id/button_follower"
-                android:layout_width="1000dp"
-                android:layout_height="1000dp"
-                android:layout_weight="1"
-                android:text="FOLLOWERS"
-                android:backgroundTint="@color/button_default"
-                android:textColor="#FFFFFF"
-                android:gravity="center"
-                android:textSize="18sp" />
-        </LinearLayout>
+            <pl.droidsonroids.gif.GifImageView
+                android:id="@+id/gif_follower"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/followers_gif" />
 
+            <TextView
+                android:id="@+id/follower_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Followers"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </FrameLayout>
     </LinearLayout>
 
-    <!-- Content area -->
     <FrameLayout
         android:id="@+id/postFragment"
         android:layout_width="match_parent"
