--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -4,33 +4,46 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorBackground"
+    android:background="@drawable/white_translucency_gradient_vertical"
     android:minHeight="?attr/actionBarSize"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    app:menu="@menu/menu_header">
+    app:menu="@menu/menu_header"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-    <!-- LOGO -->
+
     <ImageView
         android:id="@+id/header_logo"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:background="@null"
         android:scaleType="fitCenter"
-        android:src="@drawable/baseline_music_note_48"/>
+        android:tint="@color/white"
+        android:alpha="0.8"
+        android:src="@drawable/baseline_music_note_48"
+        android:shadowColor="@color/white"
+        android:shadowDx="3"
+        android:shadowDy="3"
+        android:shadowRadius="10"/>
 
-    <!-- TITLE -->
     <TextView
         android:id="@+id/title_center"
         android:layout_width="wrap_content"
         android:layout_height="65sp"
-        android:text="SoundPalette"
-        android:textSize="30sp"
-        android:textAlignment="center"
+        android:layout_gravity="center"
         android:paddingStart="10dp"
         android:paddingTop="15dp"
         android:paddingEnd="10dp"
-        android:layout_gravity="center"
-        android:textColor="@color/white"/>
+        android:text="SoundPalette"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+    android:textStyle="bold"
+    android:textSize="30sp"
+        android:shadowColor="@color/white"
+        android:shadowDx="3"
+        android:shadowDy="3"
+        android:shadowRadius="4"
+ />
+
+
 
 </androidx.appcompat.widget.Toolbar>
