--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -23,102 +23,84 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/edit_text"
-            android:layout_margin="@dimen/edit_text_margin"
-            android:orientation="vertical"
-android:backgroundTint="@color/white"
-            android:background="@drawable/rounded_corners">
-            <EditText
-                android:id="@+id/registerUsername"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/register_name"
-                android:focusable="true"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/edit_text"
-            android:layout_margin="@dimen/edit_text_margin"
-            android:orientation="vertical"
-            android:backgroundTint="@color/white"
-
-            android:background="@drawable/rounded_corners">
-
-            <EditText
-                android:id="@+id/registerPassword"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/register_password"
-                android:inputType="textPassword"
-                android:focusable="true"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/edit_text"
-            android:layout_margin="@dimen/edit_text_margin"
-            android:backgroundTint="@color/white"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/transparent"
 
             android:orientation="vertical"
             android:background="@drawable/rounded_corners">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Email"
+                android:layout_gravity="start"
+                android:paddingStart="5dp"/>
+
             <EditText
                 android:id="@+id/registerEmail"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/register_email_address"
-                android:focusable="true"/>
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:hint="someone@youremail.com"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/edit_text"
-            android:layout_margin="@dimen/edit_text_margin"
-            android:backgroundTint="@color/white"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/transparent"
 
             android:orientation="vertical"
             android:background="@drawable/rounded_corners">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Email"
+                android:layout_gravity="start"
+                android:paddingStart="5dp"/>
+
             <EditText
                 android:id="@+id/registerPhone"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/register_phone"
-                android:focusable="true"/>
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:hint="###-###-####"/>
+
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/edit_text_margin"
 
-            android:gravity="center">
+            android:id="@+id/pick_date">
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="@dimen/edit_text"
-                android:layout_weight="6"
-                android:backgroundTint="@color/white"
-
-                android:layout_margin="@dimen/edit_text_margin"
-                android:orientation="vertical"
-                android:background="@drawable/rounded_corners">
-                <EditText
-                    android:id="@+id/registerDob"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/register_dob"
-                    android:enabled="false"
-                    android:focusable="true"/>
-            </LinearLayout>
-            <ImageButton
-                android:id="@+id/btnDatePicker"
-                android:layout_width="0dp"
-
-                android:tint="@color/white"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_margin="@dimen/edit_text_margin"
-                android:src="@drawable/icon_calendar"
-                android:background="@android:color/transparent"
-                android:focusable="true"/>
+                android:orientation="vertical"
+                android:layout_gravity="start">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="30sp"
+                    android:id="@+id/selected_date"
+                    android:hint="Select your birthday"
+
+                    android:layout_gravity="center"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/white"/>
+
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@null"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/icon_calendar" />
         </LinearLayout>
 
         <LinearLayout
@@ -131,25 +113,21 @@ android:backgroundTint="@color/white"
                 android:layout_width="@dimen/profile_pic"
                 android:alpha="0.5"
 
-                android:tint="@color/white"
                 android:layout_height="@dimen/profile_pic"
                 android:layout_margin="@dimen/edit_text_margin"
                 android:src="@drawable/baseline_person_100"
                 android:background="@drawable/posts_profile"
 
                 android:focusable="true"
-                android:clickable="true"/>
+                android:clickable="true"
+                app:tint="@color/white" />
         </LinearLayout>
-
         <Spinner
             android:id="@+id/registerLocation"
-            android:backgroundTint="@color/white"
-
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/spinner_height"
-            android:layout_margin="@dimen/edit_text_margin"
-            android:background="@drawable/rounded_corners"
-            android:focusable="true"/>
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown" />
     </LinearLayout>
 
     <LinearLayout
@@ -160,35 +138,6 @@ android:backgroundTint="@color/white"
         android:orientation="horizontal"
         android:background="@color/sp_main_bg">
 
-        <!-- Clear button -->
-        <FrameLayout
-            android:id="@+id/frame_clear"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginEnd="@dimen/edit_text_margin"
-            android:background="@drawable/round_button_shape"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackgroundBorderless">
-
-            <pl.droidsonroids.gif.GifImageView
-                android:id="@+id/gif_clear"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/saved_profile"/>
-
-            <TextView
-                android:id="@+id/clear_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="CLEAR"
-                android:textColor="@android:color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
-        </FrameLayout>
 
         <FrameLayout
             android:id="@+id/frame_save"
@@ -213,9 +162,9 @@ android:backgroundTint="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="SAVE"
+                android:text="Finish"
                 android:textColor="@android:color/white"
-                android:textSize="18sp"
+                android:textSize="30sp"
                 android:textStyle="bold"/>
         </FrameLayout>
     </LinearLayout>
