--- a/app/src/main/res/layout/adapter_posts.xml
+++ b/app/src/main/res/layout/adapter_posts.xml
@@ -10,7 +10,7 @@
             android:layout_height="75dp"
             android:orientation="horizontal">
 
-
+                <!-- Poster's Profile -->
                 <ImageButton
                     android:layout_width="75dp"
                     android:layout_height="match_parent"
@@ -20,6 +20,7 @@
                     android:src="@drawable/navigation_profile_24"
                     android:tint="@color/white" />
 
+                <!-- Poster's Username and Comments -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -34,8 +35,8 @@
                             android:paddingTop="5dp"
                             android:text="\@USERNAME"
                             android:textColor="@android:color/darker_gray"
-                        android:textSize="10dp"
-                        android:textStyle="bold" />
+                            android:textSize="10dp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/postCaption"
@@ -44,20 +45,18 @@
                             android:background="@drawable/white_translucency_gradient_horizontal"
                             android:text="CAPTION"
                             android:textColor="@color/black"
-
                             android:textSize="14dp" />
-
-
                 </LinearLayout>
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/postImage"
+        <!-- Post Fragment -->
+        <FrameLayout
+            android:id="@+id/postFragmentDisplay"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:layout_gravity="center"
-            android:scaleType="centerCrop" />
+            android:layout_gravity="center"/>
 
+        <!-- Interactions Bar -->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="35dp"
